# retro-game

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.alpine  README.md  docker-compose-alpine.yml  docker-compose.yml  dockerfile-pgdb  pom.xml  prod.sh
.github/workflows/: ci.yml
battle-engine/: BattleEngine.c  BattleEngine.cpp  CMakeLists.txt
config/: application.properties  application.properties.example
etc/: docker-compose.yml  nginx.conf  retro-game.service
sql/: schema.sql  update_0.23.1-0.24.0.sql  update_0.25.1-0.26.0.sql  update_0.26.0-0.27.0.sql  update_0.28.0-0.29.0.sql
sql/updates/: update_0.24.0-0.25.0.sql  update_0.27.0-0.28.0.sql  update_0.29.1-0.30.0.sql  update_0.32.1-0.33.0.sql  update_0.33.0-0.34.0.sql  update_0.34.3_0.34.4.sql  update_0.34.4_0.34.5.sql  update_0.34.5_0.35.0.sql  update_0.35.0-0.35.1.sql  update_0.35.1-0.36.0.sql  update_0.37.0-0.38.0.sql  update_0.38-0.39.sql  update_0.38.2-0.39.0.sql
src/: checkip.sh
src/main/bash/: bootstrap.sh  discordwebh.bash  econ-bonus.sh  env-announce.bash  env-cleanup.bash  env-colonizer.sh  envoy.bash  galaxy-blocker.sh  inc-cleanup.bash  inc-colonizer.bash  inc-prog-ann.bash  inc-res-maker copy.bash  inc-res-maker.bash  inc-start.bash  inc-victory.bash  pirate-econ.bash  ship-builder.sh  test.bash
src/main/java/com/github/retro_game/retro_game/: Application.java
src/main/kotlin/com/github/retro_game/body/: Body.kt  (+2 more)
src/main/python/: import psycopg2.py
src/main/resources/: message_cz.properties  messages.properties  messages_fr.properties  messages_pl.properties  messages_sp.properties
src/main/resources/pages/: nhome.html  shipyard.html  style.css  styles.css  testlogin.html
src/main/resources/public/static/js/: body-keyboard-navigation.js  details.js  galaxy.js  jump-gate.js  messages.js  phalanx.js  reports-espionage.js  reports.js  retrogame.js  send-fleet.js  statistics-distinct-changes.js  statistics-distribution-changes.js  tooltip-1.2.0.min.js  tooltip-1.3.0.min.js  tooltip-1.3.3.min.js
src/main/resources/templates/: admin-ban-management.html  admin-home.html  admin-layout.html  admin-menu.html  admin-push-detection.html  alliance-application.html  alliance-applications.html  alliance-apply.html  alliance-circular-message.html  alliance-create.html  alliance-leave.html  alliance-manage-disband.html  alliance-manage-logo.html  alliance-manage-members.html  alliance-manage-text.html  alliance-manage.html  alliance-members.html  alliance-view.html  body-settings-abandon.html  body-settings-change-image.html  body-settings-rename.html  body-settings.html  buildings.html  changelog.html  combat-report-combatants.html  combat-report-round-combatants.html  combat-report.html  create-homeworld.html  details-building.html  details-technology.html  details-unit.html  empire.html  error.html  espionage-report.html  flight-event.html  flights-send-missiles.html  flights-send.html  flights.html  galaxy-navigation.html  galaxy.html  (+53 more)
src/main/resources/templates/mobile/: admin-ban-management.html  admin-home.html  admin-layout.html  admin-menu.html  admin-push-detection.html  alliance-application.html  alliance-applications.html  alliance-apply.html  alliance-circular-message.html  alliance-create.html  alliance-leave.html  alliance-manage-disband.html  alliance-manage-logo.html  alliance-manage-members.html  alliance-manage-text.html  alliance-manage.html  alliance-members.html  alliance-view.html  body-settings-abandon.html  body-settings-change-image.html  body-settings-rename.html  body-settings.html  buildings.html  changelog.html  combat-report-combatants.html  combat-report-round-combatants.html  combat-report.html  create-homeworld.html  details-building.html  details-technology.html  details-unit.html  empire.html  espionage-report-items.html  espionage-report.html  flights-send-missiles.html  flights-send.html  flights.html  galaxy-navigation.html  galaxy.html  hall-of-fame.html  (+43 more)
(+914 files in other folders)
